Fix gap between image and text (#109)
* widen the text to reduce white space.

* remove border radius from image on tiny screens

* revert border-radius for image

* set rightColumn grid template to 1fr

* changed grid-gap to be fixed size

* fixed em to px

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -172,7 +172,7 @@
     &.fairLaunch {
       display: grid;
       grid-template-columns: auto 1fr;
-      column-gap: 10%;
+      column-gap: 80px;
       font-family: Inter;
 
       // .pic {
